color contrast A11Y fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -407,3 +407,8 @@ nav h1 a {
 
 
 }
+
+
+.hidden {
+  visibility: hidden;
+}
